--- a/app/src/main/res/layout/activity_tv_guide.xml
+++ b/app/src/main/res/layout/activity_tv_guide.xml
@@ -28,7 +28,7 @@
 
             <include
                 android:id="@+id/layout_main"
-                layout="@layout/content_main" />
+                layout="@layout/content_tv_guide" />
 
         </android.support.design.widget.CoordinatorLayout>
 
