--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="heading_background">#F9FAF9</color>
+    <color name="color_grey">#E4E4E4</color>
 </resources>
