--- a/app/src/main/res/layout/item_tv_guide.xml
+++ b/app/src/main/res/layout/item_tv_guide.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <data>
 
@@ -11,32 +11,39 @@
     </data>
 
     <android.support.constraint.ConstraintLayout
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/shape_rectange_grey">
 
         <ImageView
             android:id="@+id/iv_show"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="80dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/tv_show_s_banner_image"
-            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="centerInside"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:src_compat="@{eventModel.epgEventImage}"
-            android:scaleType="centerCrop" />
+            app:src_compat="@{eventModel.epgEventImage}" />
 
         <TextView
             android:id="@+id/tv_show_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:text="@{eventModel.programmeTitle}"
             android:textSize="12sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_show" />
 
@@ -60,7 +67,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
-            android:text="@{safeUnbox(eventModel.channelId)}"
+            android:text='@{eventModel.channelId + ""}'
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
